# DirectPort

./: CMakeLists.txt  DirectPort.cpp  DirectPort.h  LICENSE  ProducerD3D11.cpp  ProducerD3D12.cpp  README.md  SuperConsumer64.cpp  TegrityCamAdvance.cpp  VirtuaCamDLL.def  VirtuaCamEXE.cpp  build.ps1  knownperfectgroundtruthperfectswap.py  pybind_wrapper.cpp
DirectPort/: DirectPort.cpp  DirectPort.h  DirectPortCamera.cpp  DirectPortCamera.h  DirectPortCameraWrapper.cpp  DirectPortGL.cpp  DirectPortGL.h  DirectPortGLWrapper.cpp  DirectPortNumpy.cpp  DirectPortNumpy.h  DirectPortNumpyWrapper.cpp  DirectPortONNX.cpp  DirectPortONNX.h  DirectPortONNXWrapper.cpp  DirectPortWrapper.cpp  Manifest.cpp  Manifest.h
Scripts/: Camera.py  DPCamera.py  camera_to_directport_window.py  gl_consumer.py  gl_producer.py  gl_switcher.py  numpy_ipc_test.py  numpy_roundtrip_test.py  numpy_window_test.py  numpytest.py  onnxtest.py  onnxtest2.py  onnxtest3.py  pyconsumer11.py  pyconsumer12.py  pyheatmap_consumer.py  pyheatmap_producer.py  pymultiplexer11.py  pymultiplexer12.py  pyproducer11.py  pyproducer12.py  pyshaderfilter.py  pyshaderfilter12.py  pyshaderfilter2.py  pyshaderproducer.py
